--- a/wp-content/themes/dttw/assets/src/css/navigation.scss
+++ b/wp-content/themes/dttw/assets/src/css/navigation.scss
@@ -46,25 +46,90 @@ nav.nav {
 			list-style:none;
 			// margin-left:0.5rem;
 			margin-right:0.5rem;
-			padding-left:0.5rem;
-			padding-right:0.5rem;
 			&:first-child {
 				margin-left:0;
 			}
 			&:last-child {
 				margin-right:0;
 			}
+			&.current-menu-item {
+				a {
+					color:$white;
+					font-weight: bold;
+					&::before {
+						-webkit-transform: translateY(0px);
+						-moz-transform: translateY(0px);
+						transform: translateY(0px);
+						opacity: 1;
+					}
+					&::after {
+						-webkit-transform: translateY(0px);
+						-moz-transform: translateY(0px);
+						transform: translateY(0px);
+						opacity: 1;
+					}
+				}
+			}
 			a {
 				display: inline-block;
 				color:$gray;
 				text-decoration: none;
-				padding-top: 1rem;
-				padding-bottom: 1rem;
+				padding:1rem 0.65rem;
 				font-family:$krona;
 				text-transform: uppercase;
-				font-size: 0.75rem;
+				font-size:0.688rem;
 				letter-spacing: 1px;
 				line-height: 1;
+				position: relative;
+				transition: .2s ease all;
+				&:hover {
+					color:$white;
+					font-weight: bold;
+					&::before {
+						-webkit-transform: translateY(0px);
+						-moz-transform: translateY(0px);
+						transform: translateY(0px);
+						opacity: 1;
+					}
+					&::after {
+						-webkit-transform: translateY(0px);
+						-moz-transform: translateY(0px);
+						transform: translateY(0px);
+						opacity: 1;
+					}
+				}
+				&::before {
+					content: '';
+					width:100%;
+					height:2px;
+					background:$white;
+					position:absolute;
+					opacity: 0;
+					top:0;
+					left:0;
+					-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+					-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+					transition: opacity 0.2s, transform 0.2s;
+					-webkit-transform: translateY(-10px);
+					-moz-transform: translateY(-10px);
+					transform: translateY(-10px);
+				}
+				&::after {
+					content: '';
+					width:100%;
+					height:2px;
+					background:$white;
+					position:absolute;
+					opacity: 0;
+					bottom:0;
+					left:0;
+					-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+					-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+					transition: opacity 0.2s, transform 0.2s;
+					-webkit-transform: translateY(10px);
+					-moz-transform: translateY(10px);
+					transform: translateY(10px);
+				}
 			}
 		}
 	}
