--- a/wp-content/themes/dttw/assets/src/css/navigation.scss
+++ b/wp-content/themes/dttw/assets/src/css/navigation.scss
@@ -19,6 +19,9 @@ a.logo {
 	height:45px;
 	margin-top:1rem;
 	margin-bottom:1rem;
+	@include breakpoint(small) {
+		height:20px;
+	}
 	&:hover {
 		svg {
 			.st2 {
@@ -36,6 +39,36 @@ a.logo {
 	}
 }
 nav.nav {
+	opacity: 1;
+	padding-top: 4.5rem;
+	position: fixed;
+	padding-right: 1.125rem;
+	padding-left: 1.125rem;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,45,91,0.95);
+	-webkit-animation-name: fadeOutRight;
+	animation-name: fadeOutRight;
+	-webkit-animation-duration: .2s;
+	animation-duration: .2s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	@include breakpoint(large) {
+		opacity: 1;
+		padding-top:0;
+		position: relative;
+		padding-right: 0;
+		padding-left: 0;
+		top: 0;
+		right: 0;
+		width: 100%;
+		height:auto;
+		background:none;;
+		-webkit-animation-name:none;
+		animation-name: none;
+	}
 	ul {
 		margin:0;
 		padding:0;
