--- a/wp-content/themes/dttw/assets/src/css/variables-and-mixins.scss
+++ b/wp-content/themes/dttw/assets/src/css/variables-and-mixins.scss
@@ -68,3 +68,44 @@ $six:'Six Caps', sans-serif;
 		@media screen and (min-width: 64.063em) { @content ; }
 	}
 }
+
+//PIXAR
+@-webkit-keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
