Locked in Small and Medium Nav

--- a/wp-content/themes/dttw/assets/src/css/navigation.scss
+++ b/wp-content/themes/dttw/assets/src/css/navigation.scss
@@ -19,8 +19,11 @@ a.logo {
 	height:45px;
 	margin-top:1rem;
 	margin-bottom:1rem;
+	@include breakpoint(small-portrait) {
+		height: 7.25vw;
+	}
 	@include breakpoint(small) {
-		height:20px;
+		height: 20px;
 	}
 	&:hover {
 		svg {
@@ -34,13 +37,104 @@ a.logo {
 		height: 100%;
 		.st2 {
 			transition: .2s ease all;
-			fill:$white;
+			fill:$gray;
+			@include breakpoint(large) {
+				fill:$white;
+			}
 		}
 	}
 }
 #toggle {
 	z-index: 100;
 	position: relative;
+	height:100%;
+	display: flex;
+	align-items: center;
+	span.burger {
+		position: relative;
+		transition: .2s ease all;
+		display: flex;
+		&.open {
+			span {
+				opacity: 0;
+				height:20px;
+			}
+			&::before {
+				content: '';
+				width:100%;
+				height:2px;
+				background:$gray;
+				position:absolute;
+				top:50%;
+				// left:50%;
+				-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+				-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+				transition: opacity 0.2s, transform 0.2s;
+
+				-webkit-transform:rotate(45deg);
+				transform:rotate(45deg);
+			}
+			&::after {
+				content: '';
+				width:100%;
+				height:2px;
+				background:$gray;
+				position:absolute;
+				top:50%;
+				// left:50%;
+				-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+				-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+				transition: opacity 0.2s, transform 0.2s;
+
+
+				-webkit-transform:rotate(-45deg);
+				transform:rotate(-45deg);
+			}
+		}
+		span {
+			font-family:$krona;
+			text-transform: uppercase;
+			font-size: 0.688rem;
+			letter-spacing: 1px;
+			line-height: 1;
+			font-weight:bold;
+			text-decoration: none;
+			color:$gray;
+			opacity: 1;
+		}
+		&.close {
+			&::before {
+				content: '';
+				width:100%;
+				height:2px;
+				background:$gray;
+				position:absolute;
+				top:0;
+				left:0;
+				-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+				-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+				transition: opacity 0.2s, transform 0.2s;
+				-webkit-transform: translateY(-10px);
+				-moz-transform: translateY(-10px);
+				transform: translateY(-10px);
+			}
+			&::after {
+				content: '';
+				width:100%;
+				height:2px;
+				background:$gray;
+				position:absolute;
+				bottom:0;
+				left:0;
+				-webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+				-moz-transition: opacity 0.2s, -moz-transform 0.2s;
+				transition: opacity 0.2s, transform 0.2s;
+				-webkit-transform: translateY(10px);
+				-moz-transform: translateY(10px);
+				transform: translateY(10px);
+			}
+		}
+	}
 }
 nav.nav {
 	width: 100%;
@@ -62,6 +156,7 @@ nav.nav {
     animation-fill-mode: both;
 	@include breakpoint(large) {
 		opacity: 1;
+		display: block;
 		padding-top:0;
 		position: relative;
 		padding-right: 0;
@@ -73,6 +168,9 @@ nav.nav {
 		background:none;;
 		-webkit-animation-name:none;
 		animation-name: none;
+	}
+	@include breakpoint(medium) {
+		padding-top:5rem;
 	}
 	&.open {
 		display: block;
