Started the About and FAQ Pages

--- a/wp-content/themes/dttw/assets/src/css/build.scss
+++ b/wp-content/themes/dttw/assets/src/css/build.scss
@@ -43,6 +43,18 @@ p {
 }
 
 
+section {
+	&:first-of-type {
+		padding-top:2rem;
+	}
+	&:last-of-type {
+		padding-bottom:2rem;
+	}
+}
+
+
+
+
 //Sponsors & Date
 section.sponsors-date {
 	.sponsors {
