--- a/wp-content/themes/dttw/assets/src/css/faq.scss
+++ b/wp-content/themes/dttw/assets/src/css/faq.scss
@@ -3,3 +3,15 @@
 		background:#fff;
 	}
 }
+.q-a {
+	margin-bottom: 1rem;
+	&:last-of-type {
+		margin-bottom:0;
+	}
+	.question {
+		font-weight:bold;
+	}
+	.answer {
+
+	}
+}
