--- a/wp-content/themes/dttw/assets/src/css/build.scss
+++ b/wp-content/themes/dttw/assets/src/css/build.scss
@@ -128,7 +128,7 @@ footer {
 	p {
 		font-family: $sans;
 		font-size:0.75rem;
-		color:#fff;
+		color:rgba(255,255,255,0.5);
 		text-align: center;
 	}
 }
