--- a/wp-content/themes/dttw/assets/src/css/app.scss
+++ b/wp-content/themes/dttw/assets/src/css/app.scss
@@ -1,8 +1,8 @@
-*, *:before, *:after {
-	-moz-box-shadow: 0 0 5px rgba(0,168,225,.5);
-	-webkit-box-shadow: 0 0 5px rgba(0,168,225,.5);
-	box-shadow: 0 0 5px rgba(0,168,225,.5);
-}
+// *, *:before, *:after {
+// 	-moz-box-shadow: 0 0 5px rgba(0,168,225,.5);
+// 	-webkit-box-shadow: 0 0 5px rgba(0,168,225,.5);
+// 	box-shadow: 0 0 5px rgba(0,168,225,.5);
+// }
 
 @import 'variables-and-mixins.scss';
 @import 'foundation.min.css';
@@ -12,3 +12,4 @@
 @import 'faq.scss';
 @import 'contact.scss';
 @import 'home.scss';
+@import 'footer.scss';
