--- a/wp-content/themes/dttw/assets/src/css/build.scss
+++ b/wp-content/themes/dttw/assets/src/css/build.scss
@@ -50,6 +50,20 @@ section {
 			}
 		}
 	}
+	a {
+		padding-top:0.25rem;
+		text-decoration: none;
+		border-bottom: 2px solid rgba(253,199,12,.5);
+		box-shadow: inset 0 -2px rgba(253,199,12,.5);
+		color: inherit;
+		-webkit-transition: background .15s cubic-bezier(.33,.66,.66,1);
+		transition: background .15s cubic-bezier(.33,.66,.66,1);
+		&:hover {
+			background: rgba(253,199,12,.75);
+			border-bottom: 2px solid rgba(253,199,12,.25);
+			box-shadow: inset 0 -2px rgba(253,199,12,.25);
+		}
+	}
 }
 
 
@@ -93,16 +107,7 @@ section.bots {
 	}
 }
 
-footer {
-	padding-top:2rem;
-	padding-bottom:2rem;
-	p {
-		font-family: $sans;
-		font-size:0.75rem;
-		color:rgba(255,255,255,0.5);
-		text-align: center;
-	}
-}
+
 // footer {
 // 	background-color:$gray;
 // 	padding-top:4rem;
