Home Page Sponsor Logos

--- a/wp-content/themes/dttw/assets/src/css/footer.scss
+++ b/wp-content/themes/dttw/assets/src/css/footer.scss
@@ -20,12 +20,26 @@ footer {
 				margin-right:2rem;
 				margin-bottom:0;
 				height:auto;
+				@include breakpoint(small) {
+					width:33.3333%;
+					margin-right:1rem;
+				}
 				&:last-of-type {
 					margin-right:0;
 				}
+				&:hover {
+					svg .spon19 {
+						fill:rgba(255,255,255,.5);
+					}
+				}
 				svg {
 					width:100%;
-					height:auto;
+					height:auto;	
+					.spon19 {
+						-webkit-transition:.2s ease all;
+						transition:.2s ease all;
+						fill:rgba(255,255,255,1);
+					}
 				}
 			}
 		}
