--- a/wp-content/themes/dttw/assets/src/css/home.scss
+++ b/wp-content/themes/dttw/assets/src/css/home.scss
@@ -34,5 +34,60 @@
 			padding-bottom:0;
 		}
 	}
+	.sponsorship {
+		p {
+			font-family:$krona;
+			text-transform: uppercase;
+			font-size:0.750rem;
+			letter-spacing:2px;
+			line-height: 2;
+			font-weight: bold;
+		}
+		.logos {
+			margin-top:0.25rem;
+			display:flex;
+			align-items: center;
+			justify-content: center;
+			height:auto;
+			a.logo {
+				width:33.3333%;
+				margin-top:0;
+				margin-right:2rem;
+				margin-bottom:0;
+				height:auto;
+				@include breakpoint(small) {
+					width:33.3333%;
+					margin-right:1rem;
+				}
+				&:last-of-type {
+					margin-right:0;
+				}
+				&:hover {
+					svg .spon19 {
+						fill:rgba(0,0,0,.75);
+					}
+				}
+				// &.creativerush {
+				// 	svg {
+				// 		height:50px;
+				// 	}
+				// }
+				// &.tallgrass {
+				// 	svg {
+				// 		height:50px;
+				// 	}
+				// }
+				svg {
+					width:100%;
+					height:auto;	
+					.spon19 {
+						-webkit-transition:.2s ease all;
+						transition:.2s ease all;
+						fill:rgba(0,0,0,1);
+					}
+				}
+			}
+		}
+	}
 }
 
