--- a/wp-content/themes/dttw/assets/src/css/build.scss
+++ b/wp-content/themes/dttw/assets/src/css/build.scss
@@ -50,7 +50,7 @@ section {
 			}
 		}
 	}
-	a {
+	p a {
 		padding-top:0.25rem;
 		text-decoration: none;
 		border-bottom: 2px solid rgba(253,199,12,.5);
