--- a/wp-content/themes/dttw/assets/src/css/home.scss
+++ b/wp-content/themes/dttw/assets/src/css/home.scss
@@ -34,7 +34,7 @@
 			padding-bottom:0;
 		}
 	}
-	.sponsorship {
+	.home-sponsorship {
 		p {
 			font-family:$krona;
 			text-transform: uppercase;
