--- a/wp-content/themes/dttw/assets/src/css/about.scss
+++ b/wp-content/themes/dttw/assets/src/css/about.scss
@@ -3,3 +3,46 @@
 		background:#fff;
 	}
 }
+.judges {
+	h2 {
+		margin-bottom:4rem;
+	}
+}
+.judge {
+	margin-bottom:4rem;
+	.judge-portrait {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		a {
+			margin:0 auto;
+			display:block;
+			text-align: center;
+		}
+	}
+	.judge-bio {
+		h3 {
+			font-family:$six;
+			text-transform: uppercase;
+			font-size: 4rem;
+			letter-spacing: 10px;
+			margin-bottom:2rem;
+		}
+		p {
+			margin-bottom:2rem;
+		}
+	}
+}
+.imdb {
+	width:30px;
+	height:auto;
+	display:inline-block;
+	color:$gray;
+	&:hover {
+		color:$black;
+	}
+	svg.svg-inline--fa.fa-w-14 {
+		width:100%;
+		height:auto;
+	}
+}	
