--- a/wp-content/themes/dttw/assets/src/css/home.scss
+++ b/wp-content/themes/dttw/assets/src/css/home.scss
@@ -27,6 +27,9 @@
 		font-size:2.50rem;
 		letter-spacing:5px;
 	}
+	.title {
+		margin-bottom:1rem;
+	}
 	section {
 		background:$yellow;
 		&.bots {
@@ -91,3 +94,80 @@
 	}
 }
 
+.important-dates {
+	display:flex;
+	align-content: center;
+	justify-content: center;
+	@include breakpoint(small) {
+		flex-direction:column;
+	}
+	.important {
+		display: flex;
+		flex-flow: column;
+		align-items: flex-start;
+		justify-content: flex-start;
+		width:20%;
+		border-right: 1px solid black;
+		padding:0 1rem;
+		@include breakpoint(small) {
+			width:100%;
+			border-right:0;
+			margin-bottom:1rem;
+			align-items:flex-start
+		}
+		&:last-of-type {
+			border-right:none;
+			@include breakpoint(small) {
+				border-bottom:0;
+			}
+		}
+		.data, .location {
+			@include breakpoint(small) {
+				display: block;
+				margin: 0 auto;
+				min-width: 175px;
+			}
+		}
+		h3 {
+			margin-bottom:0.5rem;
+			line-height:1.1;
+			position:relative;
+			@include breakpoint(medium) {
+				font-size:1.5rem;
+			}
+			span.highlight {
+				font-family:$sans;
+				font-size:10px;
+				position:absolute;
+				background-color:$yellow;
+			}
+		}
+		p {
+			font-family:$krona;
+			// font-size:0.875rem;
+			font-size:0.75rem;
+			letter-spacing:1px;
+			text-transform:uppercase;
+			line-height:1.5;
+			margin-bottom:0.5rem;
+			&:last-of-type {
+				margin-bottom:0;
+			}
+			@include breakpoint(medium) {
+				font-size:0.6rem;
+			}
+		}
+		span.yellow {
+			font-size:0.75rem;
+			font-family:$sans;
+			font-weight:bold;
+			text-transform:uppercase;
+		}
+	}
+}
+.dates-locations {
+	padding-bottom:2rem;
+	@include breakpoint(large) {
+		padding-bottom:6rem;
+	}
+}
