Locked in About (for now)

--- a/wp-content/themes/dttw/assets/src/css/build.scss
+++ b/wp-content/themes/dttw/assets/src/css/build.scss
@@ -23,6 +23,10 @@ h1, .h1 {
 p, li {
 	font-family:$sans;
 	line-height:2;
+	font-size:1rem;
+	@include breakpoint(small) {
+		font-size:0.875rem;
+	}
 }
 .nobr {
 	white-space: nowrap;
@@ -39,8 +43,12 @@ section {
 		padding-bottom:4rem;
 	}
 	&.hero {
-		padding-top:6rem;
-		padding-bottom:6rem;
+		padding-top:3rem;
+		padding-bottom:1rem;
+		@include breakpoint(large) {
+			padding-top:6rem;
+			padding-bottom:6rem;
+		}
 	}
 	&.page-content {
 		p {
